--- a/my-flask-app/templates/index.html
+++ b/my-flask-app/templates/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <title>Users</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>Users</h1>
     <ul>
-      {% for user in users %}
+        {% for user in users %}
         <li>{{ user.name }}</li>
-      {% endfor %}
+        {% endfor %}
     </ul>
-  </body>
+</body>
 </html>
